service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-svc
spec:
  type: ClusterIP
  selector:
    app: starlight-live
  ports:
  - port: 80
    targetPort: 80
