static-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-server-svc
  namespace: docs-live
spec:
  selector:
    app: static-server
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
