ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: docs.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starlight-svc
            port:
              number: 80
